packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/field-injection/FieldInjectionCase.java
package sample.bad;

import org.springframework.beans.factory.annotation.Autowired;

class FieldInjectionCase {
    @Autowired
    private Object dependency;
}
